# tinyprog

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  performance.txt
.github/workflows/: standalone.yml
documentation/: CMakeLists.txt  conf.py
include/: tinyexpr.h  tinyprog.h
src/: tinyexpr.c  tinyexpr.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt  benchmark.cpp  example.cpp  example2.cpp  example3.cpp  example_program.cpp  minctest.h  test.cpp
test/source/: benchmark.cpp  example.cpp  example2.cpp  example3.cpp  example_program.cpp  test.cpp
